2010-11-05  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/LocalVersion.R (processBasehtmlFile): added headers to cache
	basehtml file

2010-10-27  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/aaa.R (EXTContainer$addJS): put in code to queue up JS code
	rather than cat it out. This will allow us to pass values from R
	to the browser by queuing up requests then periodically querying
	from the browser to events.

2010-10-13  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/aaa.R (EXTComponentWithStore$filter): call to RegExp to
	actually use regular expressions.

2010-10-09  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/aaa.R (EXTComponentWithStore$filter): Moved $filter from
	gtable out so that gdf can use the code.

2010-10-01  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/aaa.R (EXTComponentDfStore$setValues): made Trait so that gdf
	has [<- method that works

2010-08-23  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* inst/Examples/ex-clt.R (makePlot): fix to example -- was making
	matrix of values incorrectly when arguments were present.

2010-08-18  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gdf.R (widget$getValues): bug fix

2010-06-09  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gtable.R (mapRenderer): put in sensible column widths. Need
	API to adjust column width

	* R/gfile.R (gfile): got gfile working for local usage -- not
	through the web.

2010-06-04  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gtable.R (widget$filter): added proto method filter to filter
	rows. Also stretched last column

2010-06-03  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gcommandline.R (gcommandline): added new method for simple
	commandline using gWidgets widgets. Uses "notebook" type style,
	although it isn't very sophisticated.

	* NAMESPACE: bug fix, forgot to export delete method
