@@ -80,7 +80,6 @@ REvalOnStartup 'sessionSecretKey <- "abcdefg"'
 REvalOnStartup 'sessionTimeout <- 30*24*60*60' 
 
 ## The session R commands are found through
-## RSourceOnStartup "/usr/local/lib/R/site-library/gWidgetsWWW/scripts/session.R"
 REvalOnStartup "source(system.file('scripts/session.R', package='gWidgetsWWW'))"
 
 ## gWidgets AJAX setup
@@ -89,8 +88,8 @@ REvalOnStartup "source(system.file('scripts/session.R', package='gWidgetsWWW'))"
 ## RFileHandler can be found from
 ## system.file("scripts","gWidgetsWWWAJAX.R", package="gWidgetsWWW")	
 ## Must match the two names here, the url and the Location
-REvalOnStartup 'gWidgetsWWWAJAXurl <- "/gWidgetsWWW"'
-<Location /gWidgetsWWW>
+REvalOnStartup 'gWidgetsWWWAJAXurl <- "/gWidgetsWWWAJAX"'
+<Location /gWidgetsWWWAJAX>
         SetHandler r-handler
 	RFileHandler /usr/local/lib/R/site-library/gWidgetsWWW/scripts/gWidgetsWWWAJAX.R
 </Location>
@@ -100,6 +99,7 @@ REvalOnStartup 'gWidgetsWWWAJAXurl <- "/gWidgetsWWW"'
 
 ## This allows scripts to be run as, say
 ## http://xxx.xxx.com/gWidgetsWWWrun/test.R
+## just change the Location to give a different name than gWidgetsWWWrun
 ## The file gWidgetsWWWrun.R is here:
 ## system.file("scripts","gWidgetsWWWrun.R", package="gWidgetsWWW")	
 <Location /gWidgetsWWWrun>
